--- a/labs/lab3/package.json
+++ b/labs/lab3/package.json
@@ -9,6 +9,6 @@
   },
   "scripts": {
     "build": "browserify src/films.js -o dist/bundle.js",
-    "watch": "live-server"
+    "start": "live-server"
   }
 }
